--- a/web-development.html
+++ b/web-development.html
@@ -96,12 +96,11 @@
             <div class="col-sm-8 col-md-9" data-aos="fade-right">
                 <div class="row">
                   <div class="col-md-12">
-                    <div>
+                    <p>
                       Reachpeak web design agency create ecommerce platforms, web applications, custom content management systems and everything in between. We’ll guide you through every step of the process, from strategy to coding to marketing and launch.
-                    </div>
+                    </p>
                   </div>
                 </div>
-                <div>
                     <div class="row" id="Ecommerce-Solutions">
                         <div class="col-sm-2">
                             <img class="points-icon-list" src="images/ecommerce.png" alt="">
@@ -146,7 +145,6 @@
                             </p>
                         </div>
                     </div>
-                </div>
                 <div class="row">
                     <div class="col-sm-12">
                         <h2>Web Development Irealand</h2>
@@ -174,29 +172,29 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <h2>How we work</h2>
-                    <div class="row">
-                      <div class="col-md-3 col-sm-6 col-xs-12">
-                        <img src="images/web-development.png" alt="">
-                        <p> Web Development solutions based on cutting edge technology & best practices. </p>
-                      </div>
-                      <div class="col-md-3 col-sm-6 col-xs-12">
-                        <img src="images/web-design.png" alt="">
-                        <p> Websites that enhance your online presence and truly represent your business. </p>
-                      </div>
-                      <div class="col-md-3 col-sm-6 col-xs-12">
-                        <img src="images/graphic-design.png" alt="">
-                        <p> Graphic Design tailored to your brand’s culture core values and distinction. </p>
-                      </div>
-                      <div class="col-md-3 col-sm-6 col-xs-12">
-                        <img src="images/digital-marketing.png" alt="">
-                        <p> Digital marketing strategies and SEO services that help drive traffic to your website. </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                <!-- <div class="row"> -->
+                <!--   <div class="col-md-12"> -->
+                <!--     <h2>How we work</h2> -->
+                <!--     <div class="row"> -->
+                <!--       <div class="col-md-3 col-sm-6 col-xs-12"> -->
+                <!--         <img src="images/web-development.png" alt=""> -->
+                <!--         <p> Web Development solutions based on cutting edge technology & best practices. </p> -->
+                <!--       </div> -->
+                <!--       <div class="col-md-3 col-sm-6 col-xs-12"> -->
+                <!--         <img src="images/web-design.png" alt=""> -->
+                <!--         <p> Websites that enhance your online presence and truly represent your business. </p> -->
+                <!--       </div> -->
+                <!--       <div class="col-md-3 col-sm-6 col-xs-12"> -->
+                <!--         <img src="images/graphic-design.png" alt=""> -->
+                <!--         <p> Graphic Design tailored to your brand’s culture core values and distinction. </p> -->
+                <!--       </div> -->
+                <!--       <div class="col-md-3 col-sm-6 col-xs-12"> -->
+                <!--         <img src="images/digital-marketing.png" alt=""> -->
+                <!--         <p> Digital marketing strategies and SEO services that help drive traffic to your website. </p> -->
+                <!--       </div> -->
+                <!--     </div> -->
+                <!--   </div> -->
+                <!-- </div> -->
             </div>
             <section class="container web-des-sec-one visible-xs">
                 <div class="row">
