--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <ul class="ft-lt">
-                        <li><a href="#"><i class="fas fa-plus"></i>Guide To Website Grants</a></li>
-                        <li><a href="#"><i class="fas fa-plus"></i>How Much Does a Website Cost in Irealand</a></li>
+                        <li><a href="#"><i class="fas fa-circle"></i>Guide To Website Grants</a></li>
+                        <li><a href="#"><i class="fas fa-genderless"></i>How Much Does a Website Cost in Irealand</a></li>
                         <li><a href="#"><i class="fas fa-plus"></i>Resources</a></li>
                         <li><a href="#"><i class="fas fa-plus"></i>Carres</a></li>
                         <li><a href="#"><i class="fas fa-plus"></i>Blog</a></li>
