--- a/web-development.html
+++ b/web-development.html
@@ -335,7 +335,10 @@
         </div>
         <hr>
         <p class="text-center">
-        Copyright © 2018 <a href="#" target="_blank" alt="" title=""><img style="width: 78px;" class="block-ceter" src="images/reachpeak-footer.png">
+        Copyright © 2018 
+        <a href="#" target="_blank" alt="reachpeak footer logo" title="reachpeak footer logo">
+          <img style="width: 78px;" class="block-ceter" alt="reachpeak footer logo" id="ft_logo" src="images/reachpeak-footer.png">
+        </a>
         </p>
       </div>
     </footer>
