removing footer logo inline styles

--- a/web-development.html
+++ b/web-development.html
@@ -337,7 +337,7 @@
         <p class="text-center">
         Copyright © 2018 
         <a href="#" target="_blank" alt="reachpeak footer logo" title="reachpeak footer logo">
-          <img style="width: 78px;" class="block-ceter" alt="reachpeak footer logo" id="ft_logo" src="images/reachpeak-footer.png">
+          <img class="block-ceter" alt="reachpeak footer logo" id="ft_logo" src="images/reachpeak-footer.png">
         </a>
         </p>
       </div>
