href changed footer logo

--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,7 @@
         <hr>
         <p class="text-center">
           Copyright © 2018 
-          <a href="#" target="_blank" alt="reachpeak footer logo" title="reachpeak footer logo">
+          <a href="index.html" target="_blank" alt="reachpeak footer logo" title="reachpeak footer logo">
             <img class="block-ceter" alt="reachpeak footer logo" id="ft_logo" src="images/reachpeak-footer.png">
           </a>
         </p>
