--- a/portfolio.html
+++ b/portfolio.html
@@ -44,10 +44,10 @@
           </div>
           <div class="navbar-wrp">
             <ul id="navbar-soc" class=" hidden-xs nav navbar-nav navbar-right">
-              <li><a target="_blank" href="https://www.facebook.com/reachpeak.agency"><i class="fab fa-facebook-f"></i></a></li>
-              <li><a target="_blank" href="https://twitter.com/Reachpeak2"><i class="fab fa-twitter"></i></a></li>
-              <li><a target="_blank" href="https://www.instagram.com/reachpeak.agency/"><i class="fab fa-instagram"></i></a></li>
-              <!-- <li><a target="_blank" href="#"><i class="fab fa-google-plus-g"></i></a></li> -->
+              <li><a target="_self" href="https://www.facebook.com/reachpeak.agency"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a target="_self" href="https://twitter.com/Reachpeak2"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="_self" href="https://www.instagram.com/reachpeak.agency/"><i class="fab fa-instagram"></i></a></li>
+              <!-- <li><a target="_self" href="#"><i class="fab fa-google-plus-g"></i></a></li> -->
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
               <li><a href="web-development.html">Web Development</a></li>
@@ -135,7 +135,7 @@
           <p>
           Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
           </p>
-          <a target="_blank" href="http://life-med.pl">life-med.pl</a>
+          <a target="_self" href="http://life-med.pl">life-med.pl</a>
         </div>
       </div>
       <div class="row row-pr">
@@ -148,7 +148,7 @@
             <p>
             Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
             </p>
-            <a target="_blank" href="http://logistykaams.pl">logistykaams.pl</a>
+            <a target="_self" href="http://logistykaams.pl">logistykaams.pl</a>
           </div>
         </div>
       </div>
@@ -279,9 +279,9 @@
           </div>
         </div>
         <hr>
-        <p class="text-center">
+        <p class="ft_logo_wrp text-center">
         Copyright © 2018 
-        <a href="index.html" target="_blank" alt="reachpeak footer logo" title="reachpeak footer logo">
+        <a href="index.html" target="_self" alt="reachpeak footer logo" title="reachpeak footer logo">
           <img class="block-ceter" alt="reachpeak footer logo" id="ft_logo" src="images/reachpeak-footer.png">
         </a>
         </p>
