--- a/web-design.html
+++ b/web-design.html
@@ -239,12 +239,12 @@
         <div class="row">
           <div class="col-md-3 col-sm-6 col-xs-12">
             <ul class="ft-lt">
-              <li><a href="#"><i class="fas fa-plus"></i>Guide To Website Grants</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>How Much Does a Website Cost in Irealand</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>Resources</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>Carres</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>Blog</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>News</a></li>
+              <li><a href="#"><i class="fas fa-plus"></i>Web Development</a></li>
+              <li><a href="#"><i class="fas fa-plus"></i>Web Design</a></li>
+              <li><a href="#"><i class="fas fa-plus"></i>Graphic Design</a></li>
+              <li><a href="#"><i class="fas fa-plus"></i>Digital Marketing</a></li>
+              <li><a href="#"><i class="fas fa-plus"></i>Portfolio</a></li>
+              <li><a href="#"><i class="fas fa-plus"></i>About us</a></li>
             </ul>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
