links added to footer first column

--- a/about.html
+++ b/about.html
@@ -312,12 +312,12 @@
         <div class="row">
           <div class="col-md-3 col-sm-6 col-xs-12">
             <ul class="ft-lt">
-              <li><a href="#"><i class="fas fa-plus"></i>Web Development</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>Web Design</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>Graphic Design</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>Digital Marketing</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>Portfolio</a></li>
-              <li><a href="#"><i class="fas fa-plus"></i>About us</a></li>
+              <li><a href="web-development.html"><i class="fas fa-plus"></i>Web Development</a></li>
+              <li><a href="web-design.html"><i class="fas fa-plus"></i>Web Design</a></li>
+              <li><a href="graphic-design.html"><i class="fas fa-plus"></i>Graphic Design</a></li>
+              <li><a href="digital-marketing.html"><i class="fas fa-plus"></i>Digital Marketing</a></li>
+              <li><a href="portfolio.html"><i class="fas fa-plus"></i>Portfolio</a></li>
+              <li><a href="about.html"><i class="fas fa-plus"></i>About us</a></li>
             </ul>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
