--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-  <!-- NAVBAR -->
+    <!-- NAVBAR -->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -74,9 +74,9 @@
     <section class="container port-sec-one hidden-xs" data-aos="fade-down">
       <div class="row cl-ac cl-ac-border-no">
         <div class="col-sm-7 col-md-8">
-          <h2>Get a professional website at an affordable price.</h2>
+          <h2>You only get one first impression</h2>
           <p>
-          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+          Our web design services will ensure that visitors see your best side. Our Irish Design Agency offer services that enhance your online presence and make your website will truly represent your business.
           </p>
         </div>
         <div class="col-sm-5 col-md-4">
@@ -91,9 +91,9 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc" data-aos="fade-right">
           <div>
-            <h3> Dolor debitis praesentium incidunt quae?  </h3>
+            <h3>Psychological Counselling</h3> 
             <p>
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            E-commerce site with psychometrics services for professional drives  and psychological counselling.
             </p>
             <a href="http://psychotestykrakow.pl">psychotestykrakow.pl</a>
           </div>
@@ -104,9 +104,9 @@
           <img class="img-responsive" src="images/portfolio-aeu.png" alt="">
         </div>
         <div class="col-xs-12 col-md-6 pr-exc" data-aos="fade-left">
-          <h3> Dolor debitis praesentium incidunt quae?  </h3>
+          <h3>Beauty Academy</h3>
           <p>
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+          Site for beauty academy, products and services.
           </p>
           <a href="http://akademiaexpertowurody.pl">akademiaexpertowurody.pl</a>
         </div>
@@ -117,9 +117,9 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc" data-aos="fade-right">
           <div>
-            <h3> Dolor debitis praesentium incidunt quae?  </h3>
+            <h3>French Estate Agency</h3>
             <p>
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            Bespoke French estate agency site with sophisticated searching form and blog.
             </p>
             <a href="http://jadore-la-france.com/fr/">jadore-la-france.com</a>
           </div>
@@ -130,11 +130,11 @@
           <img class="img-responsive" src="images/portfolio-life-med.png" alt="">
         </div>
         <div class="col-xs-12 col-md-6 pr-exc" data-aos="fade-left">
-          <h3> Dolor debitis praesentium incidunt quae?  </h3>
+          <h3>Medical Center</h3>
           <p>
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+          Bespoke medical centre site with integrated services and schedules directory.
           </p>
-          <a target="_self" href="http://life-med.pl">life-med.pl</a>
+          <a target="_blank" href="http://life-med.pl">life-med.pl</a>
         </div>
       </div>
       <div class="row row-pr">
@@ -143,11 +143,11 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc" data-aos="fade-right">
           <div>
-            <h3> Dolor debitis praesentium incidunt quae?  </h3>
+            <h3>Labelling Systems</h3>
             <p>
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+            A brochure site to reflect innovative labelling systems. 
             </p>
-            <a target="_self" href="http://logistykaams.pl">logistykaams.pl</a>
+            <a target="_blank" href="http://logistykaams.pl">logistykaams.pl</a>
           </div>
         </div>
       </div>
@@ -209,9 +209,9 @@
       <div class="container">
         <div class="row cl-ac cl-ac-border-no">
           <div class="col-sm-7 col-md-8">
-            <h2>Get a professional website at an affordable price.</h2>
+            <h2>Are you Looking beyond the "Brochure Website”?</h2>
             <p>
-            Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+            We develop engaging Web sites that are visually striking, easy-to-navigate, and dead-simple to maintain. Our web development solutions are based on cutting edge technology & best practices.
             </p>
           </div>
           <div class="col-sm-5 col-md-4">
@@ -230,12 +230,12 @@
               <li><a href="web-design.html"><i class="fas fa-plus"></i>Web Design</a></li>
               <li><a href="graphic-design.html"><i class="fas fa-plus"></i>Graphic Design</a></li>
               <li><a href="digital-marketing.html"><i class="fas fa-plus"></i>Digital Marketing</a></li>
-              
+
             </ul>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <ul class="ft-lt ft-lt-hover">
-             <li><a href="portfolio.html"><i class="fas fa-plus"></i>Portfolio</a></li>
+              <li><a href="portfolio.html"><i class="fas fa-plus"></i>Portfolio</a></li>
               <li><a href="about.html"><i class="fas fa-plus"></i>About us</a></li>
               <li><a href="portfolio.html"><i class="fas fa-plus"></i>Contact</a></li>
             </ul>
@@ -275,14 +275,14 @@
         <hr>
         <p class="ft_logo_wrp text-center">
         Copyright © 2018 
-        <a href="index.html" target="_self" alt="reachpeak footer logo" title="reachpeak footer logo">
+        <a href="index.html" target="_blank" alt="reachpeak footer logo" title="reachpeak footer logo">
           <img class="block-ceter" alt="reachpeak footer logo" id="ft_logo" src="images/reachpeak-footer.png">
         </a>
         </p>
       </div>
     </footer>
     <!-- END OF FOOTER --> 
-        <!-- Modal --> 
+    <!-- Modal --> 
 
     <div class="modal modal_quote fade" id="Get_a_Quote" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
