update to reacent projects in index page

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                     <img class="" src="images/portfolio-jadore-la-france.png" alt="">
                   </div>
                   <div class="sl-lf">
-                    <h3> Lorem dolor praesentium eos?  </h3>
+                    <h3>French Estate Agency</h3>
                     <p>
-                    Dolor tempore nisi odio eum temporibus? Delectus ducimus deleniti voluptate explicabo adipisci Ducimus aspernatur fugit
+                    Bespoke French estate agency site with sophisticated searching form and blog.
                     </p>
-                    <a href="#">Read more about this project</a>
+                    <a href="http://jadore-la-france.com/fr/">jadore-la-france.com</a>
                   </div>
                 </div>
                 <div>
@@ -163,11 +163,59 @@
                     <img class="" src="images/portfolio-oes-krakow.png" alt="">
                   </div>
                   <div class="sl-lf">
-                    <h3> Dolor debitis praesentium incidunt quae?  </h3>
+                    <h3>Psychological Counselling</h3> 
                     <p>
-                    Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis. Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
+                    E-commerce site with psychometrics services for professional drives  and psychological counselling.
                     </p>
-                    <a href="#">Read more about this project</a>
+                    <a href="http://psychotestykrakow.pl">psychotestykrakow.pl</a>
+                  </div>
+                </div>
+                <div>
+                  <div class="ls-rg">
+                    <img class="" src="images/portfolio-aeu.png" alt="">
+                  </div>
+                  <div class="sl-lf">
+                    <h3>Beauty Academy</h3>
+                    <p>
+                    Site for beauty academy, products and services.
+                    </p>
+                    <a href="http://akademiaexpertowurody.pl">akademiaexpertowurody.pl</a>
+                  </div>
+                </div>
+                <div>
+                  <div class="ls-rg">
+                    <img class="" src="images/portfolio-jadore-la-france.png" alt="">
+                  </div>
+                  <div class="sl-lf">
+                    <h3>French Estate Agency</h3>
+                    <p>
+                    Bespoke French estate agency site with sophisticated searching form and blog.
+                    </p>
+                    <a href="http://jadore-la-france.com/fr/">jadore-la-france.com</a>
+                  </div>
+                </div>
+                <div>
+                  <div class="ls-rg">
+                    <img class="" src="images/portfolio-life-med.png" alt="">
+                  </div>
+                  <div class="sl-lf">
+                    <h3>Medical Center</h3>
+                    <p>
+                    Bespoke medical centre site with integrated services and schedules directory.
+                    </p>
+                    <a target="_blank" href="http://life-med.pl">life-med.pl</a>
+                  </div>
+                </div>
+                <div>
+                  <div class="ls-rg">
+                    <img class="" src="images/ams.png" alt="">
+                  </div>
+                  <div class="sl-lf">
+            <h3>Labelling Systems</h3>
+            <p>
+            A brochure site to reflect innovative labelling systems. 
+            </p>
+            <a target="_blank" href="http://logistykaams.pl">logistykaams.pl</a>
                   </div>
                 </div>
               </div>
@@ -204,7 +252,7 @@
               <div class="owl-carousel owl-tes owl-theme">
                 <div class="cyt">
                   <p class="te-txt">
-                   "We considered web design agencies from giant web development companies to some very small operations. Reachpeak stood above them all."
+                  "We considered web design agencies from giant web development companies to some very small operations. Reachpeak stood above them all."
 
                   </p>
                   <span class="te-auth">David Murphy</span>
@@ -255,12 +303,12 @@
               <li><a href="web-design.html"><i class="fas fa-plus"></i>Web Design</a></li>
               <li><a href="graphic-design.html"><i class="fas fa-plus"></i>Graphic Design</a></li>
               <li><a href="digital-marketing.html"><i class="fas fa-plus"></i>Digital Marketing</a></li>
-              
+
             </ul>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <ul class="ft-lt ft-lt-hover">
-             <li><a href="portfolio.html"><i class="fas fa-plus"></i>Portfolio</a></li>
+              <li><a href="portfolio.html"><i class="fas fa-plus"></i>Portfolio</a></li>
               <li><a href="about.html"><i class="fas fa-plus"></i>About us</a></li>
               <li><a href="portfolio.html"><i class="fas fa-plus"></i>Contact</a></li>
             </ul>
@@ -333,105 +381,105 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
     <script>
-        $(document).ready(function(){
-          $(".owl-carousel.owl-tes").owlCarousel({
-          items: 1,
-            dots: true,
-        });
-          $(".owl-carousel.owl-port").owlCarousel({
-          items: 1,
-            dots: true,
-            loop: true
-        });
-        });
+$(document).ready(function(){
+  $(".owl-carousel.owl-tes").owlCarousel({
+  items: 1,
+    dots: true,
+});
+  $(".owl-carousel.owl-port").owlCarousel({
+  items: 1,
+    dots: true,
+    loop: true
+});
+});
     </script>
     <script>
-      // Wrap every letter in a span
+// Wrap every letter in a span
 
 
-      // Wrap every letter in a span
-      $('.ml12 .wraper .letters').each(function(){
-        $(this).html($(this).text().replace(/([^\x00-\x80]|\w)/g, "<span class='letter'>$&</span>"));
-      });
+// Wrap every letter in a span
+$('.ml12 .wraper .letters').each(function(){
+  $(this).html($(this).text().replace(/([^\x00-\x80]|\w)/g, "<span class='letter'>$&</span>"));
+});
 
-        anime.timeline({loop: true})
-          .add({
-        targets: '.ml12 .letters-1 .letter',
-          translateX: [40,0],
-          translateZ: 0,
-          opacity: [0,1],
-          easing: "easeOutExpo",
-          duration: 3200,
-          delay: function(el, i) {
-        return 500 + 30 * i;
-      }
-      }).add({
-        targets: '.ml12 .letters-1 .letter',
-          translateX: [0,-30],
-          opacity: [0],
-          easing: "easeInExpo",
-          duration: 500,
-          delay: function(el, i) {
-        return 100 + 30 * i;
-      }
-      }).add({
-        targets: '.ml12 .letters-2 .letter',
-          translateX: [40,0],
-          translateZ: 0,
-          opacity: [0,1],
-          easing: "easeOutExpo",
-          duration: 3200,
-          delay: function(el, i) {
-        return 500 + 30 * i;
-      }
-      }).add({
-        targets: '.ml12 .letters-2 .letter',
-          translateX: [0,-30],
-          opacity: [1,0],
-          easing: "easeInExpo",
-          duration: 1100,
-          delay: function(el, i) {
-        return 100 + 30 * i;
-      }
-      }).add({
-        targets: '.ml12 .letters-3 .letter',
-          translateX: [40,0],
-          translateZ: 0,
-          opacity: [0,1],
-          easing: "easeOutExpo",
-          duration: 3200,
-          delay: function(el, i) {
-        return 500 + 30 * i;
-      }
-      }).add({
-        targets: '.ml12 .letters-3 .letter',
-          translateX: [0,-30],
-          opacity: [1,0],
-          easing: "easeInExpo",
-          duration: 1100,
-          delay: function(el, i) {
-        return 100 + 30 * i;
-      }
-      }).add({
-        targets: '.ml12 .letters-4 .letter',
-          translateX: [40,0],
-          translateZ: 0,
-          opacity: [0,1],
-          easing: "easeOutExpo",
-          duration: 3200,
-          delay: function(el, i) {
-        return 500 + 30 * i;
-      }
-      }).add({
-        targets: '.ml12 .letters-4 .letter',
-          translateX: [0,-30],
-          opacity: [1,0],
-          easing: "easeInExpo",
-          duration: 1100,
-          delay: function(el, i) {
-        return 100 + 30 * i;
-      }
-      });
+  anime.timeline({loop: true})
+    .add({
+  targets: '.ml12 .letters-1 .letter',
+    translateX: [40,0],
+    translateZ: 0,
+    opacity: [0,1],
+    easing: "easeOutExpo",
+    duration: 3200,
+    delay: function(el, i) {
+  return 500 + 30 * i;
+}
+}).add({
+  targets: '.ml12 .letters-1 .letter',
+    translateX: [0,-30],
+    opacity: [0],
+    easing: "easeInExpo",
+    duration: 500,
+    delay: function(el, i) {
+  return 100 + 30 * i;
+}
+}).add({
+  targets: '.ml12 .letters-2 .letter',
+    translateX: [40,0],
+    translateZ: 0,
+    opacity: [0,1],
+    easing: "easeOutExpo",
+    duration: 3200,
+    delay: function(el, i) {
+  return 500 + 30 * i;
+}
+}).add({
+  targets: '.ml12 .letters-2 .letter',
+    translateX: [0,-30],
+    opacity: [1,0],
+    easing: "easeInExpo",
+    duration: 1100,
+    delay: function(el, i) {
+  return 100 + 30 * i;
+}
+}).add({
+  targets: '.ml12 .letters-3 .letter',
+    translateX: [40,0],
+    translateZ: 0,
+    opacity: [0,1],
+    easing: "easeOutExpo",
+    duration: 3200,
+    delay: function(el, i) {
+  return 500 + 30 * i;
+}
+}).add({
+  targets: '.ml12 .letters-3 .letter',
+    translateX: [0,-30],
+    opacity: [1,0],
+    easing: "easeInExpo",
+    duration: 1100,
+    delay: function(el, i) {
+  return 100 + 30 * i;
+}
+}).add({
+  targets: '.ml12 .letters-4 .letter',
+    translateX: [40,0],
+    translateZ: 0,
+    opacity: [0,1],
+    easing: "easeOutExpo",
+    duration: 3200,
+    delay: function(el, i) {
+  return 500 + 30 * i;
+}
+}).add({
+  targets: '.ml12 .letters-4 .letter',
+    translateX: [0,-30],
+    opacity: [1,0],
+    easing: "easeInExpo",
+    duration: 1100,
+    delay: function(el, i) {
+  return 100 + 30 * i;
+}
+});
 
     </script>
 
